# randstalker

./: .gitignore  .gitmodules  CMakeFunctions.txt  CMakeLists.txt  LICENSE  README.md  Randstalker.sln  bingo.js  build_unix.sh  build_win_vs2019.bat  build_win_vs2019_release.bat  build_win_vs2022_release.bat  example_preset.json  randstalker.sln
.github/workflows/: ccpp.yml
MakefileProject/: MakefileProject.vcxproj
Randstalker/: AbstractItemSource.h  AsmCode.cpp  AsmCode.h  GameAlterations.cpp  GameAlterations.h  GameROM.cpp  GameROM.h  GameStrings.cpp  GameText.cpp  GameText.h  Item.h  ItemChest.h  ItemCodes.h  ItemInShop.h  ItemOnGround.h  ItemReward.h  ItemShop.h  ItemSource.h  ItemSources.h  OutsideTreeMap.h  RandomizerOptions.cpp  RandomizerOptions.h  Randstalker.vcxproj  Randstalker.vcxproj.filters  RegionCodes.h  SpoilerLog.h  Tools.h  TreeMap.h  UnsortedSet.h  World.cpp  World.h  WorldMacroRegion.h  WorldRandomizer.cpp  WorldRandomizer.h  WorldRegion.h  main.cpp  makefile  makefile.win64  output.md
Randstalker/Constants/: ItemCodes.h  ItemPedestalCodes.h  ItemRewardCodes.h  ItemSourceCodes.h  RegionCodes.h
Randstalker/Huffman/: Bitfield.h  HuffmanTree.h  TextDecoder.h  TextEncoder.h
Randstalker/ItemSources/: AbstractItemSource.h  ItemOnGround.h
Randstalker/MegadriveTools/: MdCode.cpp  MdCode.h  MdRom.cpp  MdRom.h  MdTypes.h
extlibs/: base64.hpp  json.hpp  md_tools.hpp
extlibs/md_tools/: code.cpp  code.hpp  rom.cpp  types.hpp
plandos/: christmas_2021_landryle.json
release_package/: gen_permalink.bat  gen_preset.bat  personal_settings.json  preset.json
release_package/presets/: beginner_friendly.json  default.json  open_random_trees.json
src/: ArgumentDictionary.hpp  Assets.cpp  Exceptions.hpp  ExplorationPath.hpp  GameAlterations.cpp  GameAlterations.h  GameAlterations.hpp  GameStrings.cpp  GameText.cpp  GameText.hpp  Globals.hpp  HintSign.h  Item.h  Item.hpp  ItemSources.hpp  RandomizerOptions.cpp  RandomizerOptions.h  RandomizerOptions.hpp  SpawnLocation.cpp  SpawnLocation.hpp  SpoilerLog.hpp  Tools.h  Tools.hpp  TreeMap.hpp  UnsortedSet.hpp  World.cpp  World.hpp  WorldMacroRegion.hpp  WorldPath.hpp  WorldRandomizer.cpp  WorldRandomizer.h  WorldRandomizer.hpp  WorldRegion.hpp  WorldSolver.hpp  apply_randomizer_options.cpp  apply_randomizer_options.hpp  assets.cpp  assets.hpp  bingo.hpp  exceptions.hpp  (+25 more)
src/Enums/: ItemCodes.hpp  ItemSourceCodes.hpp  RegionCodes.hpp  SpawnLocations.cpp  SpawnLocations.hpp
src/Extlibs/: Base64.cpp  Base64.hpp
src/Huffman/: Bitfield.h  Bitfield.hpp  HuffmanTree.h  HuffmanTree.hpp  Symbols.h  TextDecoder.h  TextDecoder.hpp  TextEncoder.hpp
src/MegadriveTools/: MdCode.cpp  MdCode.hpp  MdRom.cpp  MdRom.h  MdRom.hpp
src/assets/: game_strings.json
src/assets/titlescreen/: title1_layout.rle  title1_tiles.lz77  title2_layout.rle  title2_tiles.lz77  title3_layout.rle  title3_tiles.lz77
src/constants/: entity_type_codes.hpp  flags.hpp  item_codes.hpp  map_codes.hpp  offsets.hpp  rando_constants.hpp  values.hpp
src/extlibs/: json.hpp
src/huffman/: huffman_tree.hpp  huffman_tree_node.hpp  text_decoder.hpp  text_encoder.hpp
src/io/: graphviz_writer.cpp  io.hpp  model_writer.cpp  spoiler_writer.cpp  world_json_parser.cpp  world_json_parser.hpp  world_json_writer.cpp  writers.hpp
src/logic_model/: hint_source.cpp  hint_source.hpp  item_distribution.hpp  item_source.cpp  item_source.hpp  randomizer_world.cpp  randomizer_world.hpp  spawn_location.hpp  world_logic.cpp  world_logic.hpp  world_node.hpp  world_path.cpp  world_path.hpp  world_region.cpp  world_region.hpp  world_teleport_tree.hpp
src/logic_model/data/: hint_source.json  item.json  item_distribution.json  world_node.json  world_path.json  world_region.json  world_teleport_tree.json
src/md_tools/: code.cpp  code.hpp  rom.cpp  rom.hpp
src/model/: enemy.cpp  enemy.hpp  enemy.json  entity.cpp  entity.hpp  entity.json  entity_on_map.cpp  entity_on_map.hpp  entity_type.cpp  entity_type.hpp  entity_type.json  hint_sign.hpp  hint_source.cpp  hint_source.hpp  hint_source.json  item.cpp  item.hpp  item.json  item_source.cpp  item_source.hpp  item_source.json  map.cpp  map.hpp  map_codes.hpp  map_connection.hpp  map_palette.cpp  map_palette.hpp  spawn_location.cpp  spawn_location.hpp  spawn_location.json  world_macro_region.hpp  world_macro_region.json  world_node.hpp  world_node.json  world_path.cpp  world_path.hpp  world_path.json  world_region.hpp  world_region.json  world_teleport_tree.hpp  (+1 more)
src/model/data/: hint_source.json
src/patches/: alter_hint_provider_dialogues.cpp  alter_randomizer_credits.cpp  alter_randomizer_title.cpp  event_christmas.cpp  game_init.cpp  handle_fox_hints.cpp  handle_hint_providing_items.cpp  handle_record_book.cpp  handle_spell_book_teleport.cpp  item_behavior.cpp  kaizo.cpp  lantern.cpp  optimize_maps.cpp  other_patches.cpp  patches.cpp  patches.hpp  quality_of_life.cpp  rando_adaptations.cpp  rando_world_edits.cpp  replace_copy_by_hash.cpp  shorten_cutscenes.cpp  softlocks.cpp  story_dependencies.cpp  story_flag_reading.cpp  world_edits.cpp
src/patches/edit_content/: patch_add_foxies.hpp  patch_add_golas_heart.cpp  patch_add_golas_heart.hpp  patch_credits.hpp  patch_edit_dialogues.hpp  patch_fahl_challenge.hpp  patch_make_ryuma_mayor_saveable.hpp  patch_rando_world_edits.hpp  patch_shorten_cutscenes.hpp  patch_title_screen.hpp
src/patches/global/: game_init.cpp  (+13 more)
src/tools/: argument_dictionary.hpp  base64.cpp  base64.hpp  bitfield.hpp  bitpack.hpp  byte_array.hpp  extract_nigel_sprites.hpp  flag.h  game_text.hpp  graphviz.cpp  graphviz.hpp  textbanks_decoder.cpp  textbanks_decoder.hpp  textbanks_encoder.cpp  textbanks_encoder.hpp  tools.hpp  unsorted_set.hpp
src/world_model/: entity.cpp  entity.hpp  entity_type.cpp  entity_type.hpp  item.hpp  item_source.cpp  item_source.hpp  map.cpp  map.hpp  map_connection.hpp  map_palette.cpp  map_palette.hpp  spawn_location.cpp  spawn_location.hpp  world.cpp  world.hpp  world_teleport_tree.hpp
src/writers/: graphviz_writer.cpp  model_writer.cpp  spoiler_writer.cpp  writers.hpp
(+73 files in other folders)
